--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,6 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".homeActivity">
 
+    <Button
+        android:id="@+id/btn_to_admin"
+        android:layout_width="236dp"
+        android:layout_height="48dp"
+        android:text="AdminPanel"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -20,7 +29,7 @@
             android:text=" Welcome User!"
             android:textAlignment="center"
             android:textAllCaps="true"
-            android:textColor="#000000"
+            android:textColor="#AAAAAA"
             android:textDirection="inherit"
             android:textSize="30sp"
             android:textStyle="bold" />
